# TicTacToe

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  classes.puml  main.cpp
.github/workflows/: cmake.yml  cmake_tests.yml  coverage_report.yml
include/: Board.h  Bot.h  GameController.h  Interface.h  MCTS.h  MCTSAgent.h  MiniMax.h  NewMCTS.h  NewNode.h  NewOther.h  NewState.h  NewUCT.h  Node.h  Other.h  RandomAgent.h  State.h  UCT.h
src/: Board.cpp  CMakeLists.txt  GameController.cpp  Interface.cpp  MCTS.cpp  MCTSAgent.cpp  MiniMax.cpp  NewMCTS.cpp  NewNode.cpp  NewState  NewState.cpp  NewUCT.cpp  Node.cpp  Other.cpp  RandomAgent.cpp  State.cpp  UCT.cpp
tests/: AgentTests.cpp  CMakeLists.txt  MCTS_tests.cpp  board_tests.cpp  gamecontroller_tests.cpp  minimax_tests.cpp
